# macports-base

./: .bintray.json  .cvsignore  .gitattributes  .gitignore  .mailmap  .travis.yml  AGENTS.md  CLAUDE.md  ChangeLog  Compound | Proposal Detail #198.html  CryptoTab Browser  CryptoTab Browser alias  Dockerfile  Doxyfile  Doxyfile.in  HACKING  LICENSE  Makefile  Makefile.in  Makefile.ports  NEWS  README.md  README.txt  README_RELEASE  README_RELEASE1  README_RELEASE1.de  README_RELEASE1.es  README_RELEASE1.fr  README_RELEASE1.it  ReleaseProcess  SECURITY.md  TODO  Untitled 3  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  dp_version  foundation.m4  (+13 more)
.github/azure-workflows/: main.yml  prepare-ci-env.yml
.github/workflows/: codeql.yml  coverage.yml  main.yml  mirror.yml  prepare-ci-env.yml
Install/: Makefile  darwinports.1.0.tcl  pkg_mkindex.tcl
Install/darwinports1.0/: Makefile  darwinports.tcl
Mk/: .cvsignore  dports.autoconf.mk.in  dports.mk  dports.subdir.mk  dports.tea.mk  macports.autoconf.mk.in  macports.subdir.mk  macports.tea.mk  macports.upgrade.mk
Tcl/: pkgIndex.tcl  port.1.0.tcl  portchecksum.1.0.tcl  portextract.1.0.tcl  portfetch.1.0.tcl  portmain.1.0.tcl  portpatch.1.0.tcl  portutil.1.0.tcl
Tcl/port1.0/: Makefile  Pextlib.c  port.tcl  portchecksum.tcl  portconfigure.tcl  portextract.tcl  portfetch.tcl  portmain.tcl  portmake.tcl  portpatch.tcl  portui.tcl  portutil.tcl  strsed.c
config/: Makefile  README.TXT  RELEASE_TAG  RELEASE_URL  macosx-base-10.4-0.ppc.rpm  macports_version  mp_version
doc/: .cvsignore  INTERNALS  Makefile  Makefile.in  README.platforms  TODO  TODO.txt  archive_sites.conf  archives.txt  asciidoc-deps.tcl  asciidoc.conf  base.mtree.in  dependents-vs-dependencies.txt  files_whitelist.conf  folders_whitelist.conf  furtherdocs.txt  global-flags.txt  macosx.mtree  macosx.mtree.in  macports.conf.5  macports.conf.5.txt  macports.conf.in  manpage.xsl  pkgmirrors.conf  port-activate.1  port-activate.1.txt  port-archive.1  port-archive.1.txt  port-archivefetch.1  port-archivefetch.1.txt  port-bump.1  port-bump.1.txt  port-cat.1  port-cat.1.txt  port-cd.1  port-cd.1.txt  port-clean.1  port-clean.1.txt  port-contents.1  port-contents.1.txt  (+132 more)
doc/exampleport/: Portfile
gsoc14-interactive/: API Description.txt  README
gsoc15-portfile/: Makefile  Portfile.json  Portfile.template  README.md  all.tcl  groups.json  port-create  port-create.tcl  port-create.test  skel
gsoc15-portfile/cpan2port/: COPYING  cpan2port
gsoc15-portfile/github2port/: bitbucket2port  github2port
gsoc15-portfile/portfile-gen/: portfile-gen
gsoc15-portfile/portfile.el/: portfile.el
gsoc15-portfile/pypi2port/: README.txt  license.py  license_list.txt  pypi2port.py
keys/archives/: macports-archives-2025.pub
keys/base/: macports-base-2020.pub  macports-base-2024.pub
keys/ports/: macports-ports-2025.pub
m4/: foundation.m4  pthread.m4  tcl.m4
portmgr/: GuideRegen.sh  IndexRegen.sh  Makefile  PortIndex2MySQL.tcl  PortIndexRegen.sh  ReleaseProcess  ReleaseProcess.md  SETUP.chroot.sh  autosubmit.tcl  buildall.sh  dpkgall.tcl  dprsyncup  mpkgall.tcl  mprsyncup  mprsyncup.new  org.macports.PortIndex2MySQL.plist  packageall.tcl  rpmall.tcl  rsync.repos
portmgr/bots/: port.rb  trac.rb
portmgr/dmg/: Distribution  InstallationCheck  InstallationCheck.strings  License.html  ReadMe.rtf  postflight  postflight.in  preflight
portmgr/fedora/: REQUIREMENTS  macports.spec  macports.spec.in
portmgr/freebsd/: Makefile.in  pkg-descr  pkg-plist
portmgr/packaging/: Makefile  PortIndex2MySQL.tcl  SETUP.chroot.sh  buildall.sh  dpkgall.tcl  mpkgall.tcl  packageall.tcl  rpmall.tcl
portmgr/ubuntu/: REQUIREMENTS  macports_1.6.0-0.dsc
scripts/: compile.sh  config.sh  link.sh  tcldir.sh
src/: Makefile  Makefile.in  codesign.sh  config.h.in  cxx_stdlib_overridden.tcl.in  debug.tcl  dedup_portfiles.tcl  dedup_portfiles.tcl.in  dep_map_clean.tcl  images_to_archives.tcl  images_to_archives.tcl.in  pkg_mkindex.sh.in  pkg_mkindex.tcl  reg_init_distfiles.tcl.in  sqlite-3.1.3.diff  thread2.6.1.diff  thread2.6.2.diff  thread2.6.diff  upgrade_sources_conf_default.tcl  upgrade_sources_conf_default.tcl.in
src/cflib1.0/: CFLib.c  Makefile  Makefile.in  link.sh
src/compat/: Makefile.in  getdelim.c  getdelim.h  getline.c  getline.h  strlcat.c  strlcat.h  strlcpy.c  strlcpy.h
src/cregistry/: .entry.c.swp  Makefile  Makefile.in  README.sqlext  distfile.c  distfile.h  entry.c  entry.h  file.c  file.h  portgroup.c  portgroup.h  registry.c  registry.h  snapshot.c  snapshot.h  sql.c  sql.h  sqlext.c  util.c  util.h  vercomp.c  vercomp.h
src/darwinports1.0/: .cvsignore  Makefile  darwinports.c  darwinports.h  darwinports.tcl  darwinports_autoconf.tcl.in  darwinports_dlist.tcl  darwinports_fastload.tcl.in  darwinports_index.tcl  darwinports_util.tcl  darwinportsui.tcl  options.h  portconf.c  session.c  session.h  tcldir.sh  test_dlist.tcl  test_util.tcl  util.c  util.h
src/darwintrace1.0/: Makefile.in  access.c  close.c  darwintrace.c  darwintrace.h  mkdir.c  proc.c  readdir.c  rename.c
src/darwintrace_share/: Makefile.in  darwintrace_share.c  darwintrace_share.h
src/darwintracelib1.0/: .gitignore  Makefile  Makefile.in  access.c  close.c  coverage.sh  darwintrace.c  darwintrace.dylib  darwintrace.h  dup2.c  mkdir.c  open.c  proc.c  readdir.c  readlink.c  rename.c  rmdir.c  sandbox_actions.h  (+2 more)
src/programs/mtree/: Makefile.in  __fts13.c  aclocal.m4  bits.c  compare.c  config.guess  config.h.in  config.sub  configure  configure.ac  crc.c  create.c  err.c  excludes.c  extern.h  fgetln.c  fts.h  getid.c  misc.c  mtree.8  mtree.c  mtree.cat8  mtree.h  namespace.h  pack_dev.c  pack_dev.h  setmode.c  setprogname.c  spec.c  stat_flags.c  stat_flags.h  unvis.c  util.h  verify.c  vis.c  vis.h
tests/: Makefile  Makefile.in  sources.conf  test-macports.conf  test-ports.conf  test-tclsh.in  test.tcl  test.tcl.in
tools/: EXAMPLE  Portfile  README  bash_macports  gsoc  gsocdummyupdate.c  gsocdummyupdate.sh  gsocmake  gsocmake.c  gsocmake.sh  gsocswitchversion  gsoctestcase.sh
(+756 files in other folders)
